<resources>
    <string name="app_name">ProyekAkhir-Dicoding</string>
    <string name="myName">Abdul Latif</string>
    <string name="myEmail">alatif303@gmail.com</string>
    <string name="myGithub">github.com/Latifly</string>
    <string name="details">details</string>
    <string name="book_img">book-img</string>
    <string name="app_title">Book List App</string>
    <string name="about_me">about me</string>
    <string name="share">Share</string>
    <string name="author">Author:</string>
    <string name="published_year">Published Year:</string>
    <string name="genre">Genre:</string>
</resources>